# Instruct-4D-to-4D

./: LICENSE  README.md  ip2p_sequence.py  render_results.py  requirements.txt  run_edit_nerf.sh  run_train_nerf.sh  stream_edit.py  stream_renderer.py  stream_train.py
dataLoader/: __init__.py  deepview_dynamic.py  deepview_static.py  n3dv_dynamic.py  n3dv_static.py  n3dv_static_renderposedebug.py
ip2p_models/: generate_flow.py  ip2p.py  ip2p_sequence.py  test_anchor.py  test_depth.py  (+8 more)
nerfplayer-nerfstudio/: pyproject.toml  run_edit.sh  run_in2n.sh  run_nerf.sh  run_render.sh
nerfplayer-nerfstudio/finetune_ip2p/: generate_flow.py  slidingwindow.py  test_flow.py  test_flow_sequence.py  test_ip2p.py  test_sequence_ip2p.py
nerfplayer-nerfstudio/finetune_ip2p/configs/: drum.yaml  face.yaml  farm.yaml  jump.yaml  lego.yaml  nerf_penguin.yaml  penguin.yaml  truck.yaml
nerfplayer-nerfstudio/finetune_ip2p/models/: ip2p_attention.py  ip2p_blocks.py  ip2p_dataset.py  ip2p_resnet.py  ip2p_utils.py
nerfplayer-nerfstudio/finetune_ip2p/script/: finetune_ip2p.py  finetune_nerf_ip2p.py  finetune_view_ip2p.py  inference.py  inference_test.py  run.sh
nerfplayer-nerfstudio/nerfplayer/: ip2p.py  ip2p_sequence.py  nerfplayer_config.py  nerfplayer_datamanager.py  nerfplayer_in2n.py  nerfplayer_nerfacto.py  nerfplayer_nerfacto_field.py  nerfplayer_ngp.py  nerfplayer_ngp_field.py  nerfplayer_pipeline.py  nerfplayer_trainer.py  temporal_grid.py  vgg_perceptual_loss.py
nerfplayer-nerfstudio/nerfplayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+36 files in other folders)
